force-app/main/default/objects/Post__c/Post__c.object-meta.xml
<CustomObject>
    <label>Post</label>
    <nameField>
        <label>Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>