force-app/main/default/objects/Post__c/fields/Comment_count__c.field-meta.xml
<CustomField>
    <fullName>Comment_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de commentaire du poste.</description>
    <label>Comment count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>