force-app/main/default/objects/Post__c/fields/last_edit_date__c.field-meta.xml
<CustomField>
    <fullName>last_edit_date__c</fullName>
    <description>Date de la dernière modification.</description>
    <label>last edit date</label>
    <type>DateTime</type>
</CustomField>