force-app/main/default/objects/Post__c/fields/rank__c.field-meta.xml
<CustomField>
    <fullName>rank__c</fullName>
    <description>Position du poste par rapport aux autres.</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>