force-app/main/default/objects/Post__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id de l&apos;utilisateur.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>