force-app/main/default/objects/Post__c/fields/views__c.field-meta.xml
<CustomField>
    <fullName>views__c</fullName>
    <defaultValue>0</defaultValue>
    <label>views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>